src/test/ui/borrowck/borrowck-local-borrow-outlives-fn.ast.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/borrowck-local-borrow-outlives-fn.rs:5:6
   |
LL |     &x
   |      ^ borrowed value does not live long enough
...
LL | }
   | - borrowed value only lives until here
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
